adding cordova socail sharing plugin to acces in menu page

--- a/B9IS124_20048955/package.json
+++ b/B9IS124_20048955/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@awesome-cordova-plugins/social-sharing": "^8.0.2",
     "@capacitor/app": "7.0.1",
     "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.4.2",
@@ -28,6 +29,7 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
