--- a/B9IS124_20048955/package.json
+++ b/B9IS124_20048955/package.json
@@ -25,6 +25,7 @@
     "@capacitor/app": "7.0.1",
     "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.4.2",
+    "@capacitor/geolocation": "^7.1.4",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
